Add example for static resource chain config

--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -5,11 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Films</title>
-        <style>
-            img.cover {
-                max-width:80px
-            }
-        </style>
+        <link href="style.css" th:href="@{/style.css}" rel="stylesheet" />
     </head>
     <body>
         <p>Available</p>
