--- a/src/main/resources/templates/films/new.html
+++ b/src/main/resources/templates/films/new.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <title>New</title>
+        <link href="style.css" th:href="@{/style.css}" rel="stylesheet" />
     </head>
     <body>
         <form action="" th:action="@{/films/}" th:object="${filmForm}" method="POST">
