--- a/src/main/resources/templates/films/new.html
+++ b/src/main/resources/templates/films/new.html
@@ -2,20 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       th:lang="${#locale.language}">
-    <head>
-        <meta charset="utf-8" />
-        <title>New</title>
-        <link href="style.css" th:href="@{/style.css}" rel="stylesheet" />
-    </head>
-    <body>
-        <form action="" th:action="@{/films/}" th:object="${filmForm}" method="POST">
-            <label for="title" th:text="#{title}">title</label>
-            <input type="text" th:field="*{title}" />
-            <br />
-            <label for="releaseYear" th:text="#{releaseYear}">releaseYear</label>
-            <input type="date" th:field="*{releaseDate}" />
-            <br />
-            <button type="submit">Submit</button>
-        </form>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>New</title>
+    <link rel="stylesheet" 
+          href="style.css" th:href="@{/style.css}" 
+    />
+  </head>
+  <body>
+    <form action="" th:action="@{/films/}" 
+          th:object="${filmForm}" 
+          method="POST"
+    >
+      <label for="title" th:text="#{title}">title</label>
+      <input type="text" th:field="*{title}" />
+      <br />
+      <label for="releaseYear" 
+             th:text="#{releaseYear}">releaseYear</label>
+      <input type="date" th:field="*{releaseDate}" />
+      <br />
+      <button type="submit">Submit</button>
+    </form>
+  </body>
 </html>
